Kivio 1.2beta1 -> 1.2 beta 2
----------------------------
- Improve dcop interface : add page/layer dcop interface
- Add undo/redo feature (undo/redo insert/remove page, insert/remove stencil
change page name etc.... )

Kivio 1.2beta2 -> 1.2RC1
------------------------
- Fix change font size.

Kivio 1.2 -> 1.2.1
------------------------
- Fixed installation of straight_connector tool

Kivio 1.2.1 -> 1.3beta1
------------------------
- Cleaned up the gui

Kivio 1.3beta1 -> 1.3beta2
---------------------------
- Fixed embeding of kivio in other KOffice app.
- Implemented real clipboard support.
- Added more stencils.
- Improved diastencil support.
- Added template support.

Kivio 1.3beta2 -> 1.3beta3
---------------------------
- Added more arrowheads
- Added Kristof Borrey's Klipart Stencils

Kivio 1.3beta3 -> 1.3beta4
-------------------------
- Fixed layout problem at start up when using a template
- Fixed deletion of connected connectors

Kivio 1.3beta4 -> 1.3rc1
------------------------
- Fixed copying text in other codecs then latin1
- Fixed the size of the stencilbar when loading stencils at start up

Kivio 1.3rc1 -> 1.3
--------------------
- Made the connector tool snap to targets before the grid/help lines
- Made the select tool snap to targets before the grid when resizing connectors

Kivio 1.3 -> 1.3.1
-------------------
- Add missing code to make the 'Crop picture to edges' option
  in the page export dialog work.
- Fixed paint bug when moving stencils containing text.
- Add bounderies to the zoom to prevent lock ups and crashes.

Kivio 1.3.x -> 1.4
-------------------
- Non blocking stencilset loading.
- Added Nassi Schneiderman stencils.
- Moving selected stencils with the keyboard.