@@ -56,3 +56,4 @@ Kivio 1.3.x -> 1.4
 - Non blocking stencilset loading.
 - Added Nassi Schneiderman stencils.
 - Moving selected stencils with the keyboard.
+- Added a docker for adding stencils to the document.
